# templateR

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: rust-clippy.yml  rust.yml
app_error/: Cargo.toml
app_error/src/: lib.rs
cli/: Cargo.toml
cli/src/: app_error.rs  cli_derived.rs  constants.rs  lib.rs
cli/src/cli_derived/: cli_args.rs  cli_subcommands.rs  handlers.rs  mod.rs
cli/src/functionality/: mod.rs
cli/src/template_config_module/: mod.rs
cli/tests/: template_config_tests.rs
config/: Cargo.toml
config/src/: lib.rs  template.rs
config/tests/: template_config_tests.rs
constants/: Cargo.toml
constants/src/: lib.rs
core/: Cargo.toml
core/src/: config_logic.rs  lib.rs  template_interface.rs
core/src/template_providers/: git_provider.rs  mod.rs
core/src/template_providers/io_provider/: io_functionality.rs  mod.rs
src/: app_error.rs  constants.rs  main.rs
src/cli/: mod.rs
src/cli/functionality/: mod.rs
src/template_config/: mod.rs
templater/: Cargo.toml
templater/src/: main.rs
