# [package]
# name = "templateR"
# version = "0.1.0"
#
# [dependencies]
# clap = { version = "4.3.1", features = ["derive"] }
# confy = "0.5.1"
# copy_dir = "0.1.2"
# home = "0.5.5"
# serde = { version = "1.0.163", features = ["derive"] }
# thiserror = "1.0.40"
#
[workspace]
members = ["templater", "cli", "core", "app_error", "constants", "config"]

[workspace.dependencies]
core = { path = "./core" }
constants = { path = "./constants" }
config = { path = "./config" }
cli = { path = "./cli" }
app_error = { path = "./app_error" }
clap = { version = "4.3.1", features = ["derive"] }
confy = "0.5.1"
copy_dir = "0.1.2"
home = "0.5.5"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
clap_complete = "4.3.2"

[workspace.package]
version = "0.1.0"
authors = ["andreishark"]
edition = "2021"

# [[bin]]
# name = "bin"
# path = "./bin/src/main.rs"
