[package]
name = "templateR"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
confy = "0.5.1"
copy_dir = "0.1.3"
home = "0.5.5"
serde = { version = "1.0.164", features = ["derive"]}
thiserror = "1.0.40"

[workspace]
members= [
    "bin",
    "cli"
]

[lib]
name = "cli"
path = "./cli/src/lib.rs"

[[bin]]
name = "bin"
path = "./bin/src/main.rs"
