[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { workspace = true }
constants = { workspace = true }
app_error = { workspace = true }
config = { workspace = true }
clap = { workspace = true, features = ["derive"] }
confy = { workspace = true }
copy_dir = { workspace = true }
home = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
clap_complete = { workspace = true }
