[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_error = { workspace = true }
confy = { workspace = true }
constants = { workspace = true }
serde = { workspace = true }
home = { workspace = true }
