[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_error = { workspace = true }
config = { workspace = true }
constants = { workspace = true }
copy_dir = { workspace = true }
confy = { workspace = true }
