[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_error = { workspace = true }
config = { workspace = true }
constants = { workspace = true }
copy_dir = { workspace = true }
confy = { workspace = true }
git2 = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
