[package]
name = "templater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { path = "../cli" }
app_error = { path = "../app_error" }
clap = { version = "4.3.1", features = ["derive"] }
confy = "0.5.1"
copy_dir = "0.1.2"
home = "0.5.5"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
