[package]
name = "templater"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { workspace = true }
app_error = { workspace = true }
clap = { workspace = true, features = ["derive"] }
confy = { workspace = true }
copy_dir = { workspace = true }
home = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
